<resources>
    <string name="app_name" translatable="false">NKI Calculator</string>
    <string name="calories">Kilojoules</string>
    <string name="select"> select </string>
    <string name="select_date">Select Date</string>
    <string name="Total">Total</string>
    <string name="save">save</string>
    <string name="calculate">Calculate</string>
    <string name="nki" translatable="false">Net Kilojoules Intake:</string>
    <string name="date">Date</string>
    <string name="your_average">Your Average:</string>
    <string name="calculated_average">Calculated average</string>
    <string name="cancel">cancel</string>
    <string name="excercise_total">Exercise Total:</string>
    <string name="food_total">Food Total:</string>
    <string-array name="FoodCategories">
        <item>Select Food…</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>
    <string-array name="ExerciseCategories">
        <item>Select Exercise…</item>
        <item>Running</item>
        <item>Jogging</item>
        <item>Walking</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fill">Fill all fields</string>
    <string name="no_entry">No new Entry</string>
    <string name="last_entry">Last Entry</string>
    <string name="entry_saved">Entry saved!</string>
    <string name="fill_all">Fill all fields</string>
    <string name="canelled">Cancelled</string>
</resources>
