<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiaryFragment">

    <TextView
        android:id="@+id/diaryDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/diaryFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/diaryDate"
        android:text="@string/food_total"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/foodValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/diaryDate"
        android:layout_toEndOf="@id/diaryFood"
        android:text="@string/Total"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/diaryExercise"
        android:layout_below="@id/diaryFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excercise_total"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/exerciseValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/diaryFood"
        android:layout_toEndOf="@+id/diaryExercise"
        android:text="@string/Total"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/diaryNKI"
        android:layout_below="@id/diaryExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nki"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/nKIValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/diaryExercise"
        android:layout_toEndOf="@+id/diaryNKI"
        android:text="@string/Total"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

</RelativeLayout>